--- a/index.html
+++ b/index.html
@@ -128,9 +128,21 @@
                       <span class="icon">
                         <i class="fas fa-smile"></i>
                       </span>
-                      <span>OneAlign (HF Model)</span>
+                      <span>OneAlign (Model)</span>
                     </a>
                   </span>
+
+                      <!-- huggingface -->
+                    <span class="link-block">
+                      <a href="https://github.com/Q-Future/Q-Align/tree/main/lora_finetune" target="_blank"
+                      class="external-link button is-normal is-rounded is-dark">
+                      <span class="icon">
+                        <i class="fas fa-chalkboard-teacher"></i>
+                      </span>
+                      <span>LoRA Fine-tuning</span>
+                    </a>
+                  </span>
+                      
 
                   <!-- Github link -->
                   <span class="link-block">
