--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
                       <!-- huggingface -->
                     <span class="link-block">
-                      <a href="https://github.com/Q-Future/Q-Align/tree/main/lora_finetune" target="_blank"
+                      <a href="https://q-future.github.io/Q-Align/lora_finetune" target="_blank"
                       class="external-link button is-normal is-rounded is-dark">
                       <span class="icon">
                         <i class="fas fa-chalkboard-teacher"></i>
