--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 
 <section class="section"  style="background-color:#efeff081">
     <div class="container is-max-desktop" id="gradio">
-      <gradio-app src="https://teowu-onescorer.hf.space/"></gradio-app>
+      <gradio-app src="https://q-future-onealign.hf.space"></gradio-app>
     </div>
 </section>
 
