--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <div class="column has-text-centered">
             <h1 class="title is-1 publication-title">Q-Align: Teaching LMMs for Visual Scoring via Discrete Text-Defined Levels</h1>
             <div class="is-size-5 publication-authors">
+                    <span class="author-block">ICML 2024</span>
+              </div>
+            <div class="is-size-5 publication-authors">
 <!-- Paper authors -->
 <span class="author-block">
   <a href="https://teowu.github.io" target="_blank">Haoning Wu</a><sup>1*+</sup>,
@@ -107,6 +110,8 @@
                     <span class="author-block"><sup>3</sup>Sensetime Research</span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Equal Contribution. <sup>+</sup>Project Lead. <sup>#</sup>Corresponding Author(s).</small></span>
                   </div>
+
+            
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
